# pattern_checker

./: README.md  main.py  pyproject.toml  setup.cfg
pattern_chacker/: __init__.py  core.py
pattern_chacker.egg-info/: PKG-INFO
pattern_chacker/patterns/: basic.py  iranian.py  password.py
tests/: test_core.py  test_patterns.py
workflows/: test.yml
