
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pattern-checker"
version = "0.1.0"
authors = [
  { name = "Meisam Shabany", email = "meisam.shabany@gmail.com" },
]
description = "A Python package for validating various patterns."
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
keywords = ["pattern", "validation", "regex"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/meysamShabany/pattern_checker"
"Bug Tracker" = "https://github.com/meysamShabany/pattern_checker/issues"
