[project]
name = "pattern-chacker"
version = "1.0.2"
description = "A Python package for validating patterns like emails, phone numbers,nation code, and passwords and etc."  
readme = {file = "README.md", content-type = "text/markdown"}  
license = {file = "LICENSE"}
authors = [
    {name = "Meisam Shabany", email = "meisam.shabany@gmail.com"},
]
keywords = ["validation", "patterns", "email", "phone", "password","nation code"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",

Homepage = "https://github.com/meysamShabany/pattern_checker"
Bug Tracker = "https://github.com/meysamShabany/pattern_checker/issues"
