[metadata]
name = pattern-checker
version = attr: pattern_checker.__version__
author = Meisam Shabany
author_email = meisam.shabany@gmail.com
description = A Python package for validating various patterns.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/meysamShabany/pattern_checker
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
= .
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = .